--- a/projects/getting-started/index.html
+++ b/projects/getting-started/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8"></meta>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
+
+	<!-- Our scripts -->
 	<script src="./index.js" type="text/javascript"></script>
 </head>
 <body>
