--- a/projects/getting-started/index.html
+++ b/projects/getting-started/index.html
@@ -4,6 +4,12 @@
 	<meta charset="utf-8"></meta>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 
+	<!-- Pollyfills -->
+	<script src="https://polyfill.io/v3/polyfill.min.js"></script>
+
+	<!-- Dependencies -->
+	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+
 	<!-- Our scripts -->
 	<script src="./index.js" type="text/javascript"></script>
 </head>
