--- a/projects/getting-started/index.html
+++ b/projects/getting-started/index.html
@@ -8,9 +8,11 @@
 	<script src="https://polyfill.io/v3/polyfill.min.js"></script>
 
 	<!-- Dependencies -->
+	<script src="./config.js"></script>
+	<script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.3.0.js"></script>
 
 	<!-- Our scripts -->
-	<script src="./index.js" type="text/javascript"></script>
+	<script src="./index.js"></script>
 </head>
 <body>
         <h1>My First Heading</h1>
