Wrap in try...catch and add button to leave and join call

--- a/projects/getting-started/index.html
+++ b/projects/getting-started/index.html
@@ -17,5 +17,11 @@
 <body>
         <h1>My First Heading</h1>
         <p>My first paragraph.</p>
-</body>
+
+	<button onclick="startBasicCall()">
+		Join call
+	</button>
+	<button onclick="leaveCall()">
+		Leave call
+	</button>
 </html>
